fix: resolve Dependabot security alerts for @smithy/config-resolver
Add npm and pnpm overrides to force @smithy/config-resolver to version ^4.4.0
to address Dependabot security vulnerabilities in transitive dependencies.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "itguys-website",
   "version": "0.1.0",
   "private": true,
+  "overrides": {
+    "@smithy/config-resolver": "^4.4.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "@smithy/config-resolver": "^4.4.0"
+    }
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
