--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "overrides": {
     "@smithy/config-resolver": "^4.4.0",
-    "fast-xml-parser": ">=5.3.4"
+    "fast-xml-parser": ">=5.3.6",
+    "qs": ">=6.14.2"
   },
   "pnpm": {
     "overrides": {
       "@smithy/config-resolver": "^4.4.0",
-      "fast-xml-parser": ">=5.3.4"
+      "fast-xml-parser": ">=5.3.6",
+      "qs": ">=6.14.2"
     },
     "onlyBuiltDependencies": [
       "esbuild",
